[YGH-628] fix flexbox on schedules page for safari on ios

--- a/prototypes/scss/modules/schedules.scss
+++ b/prototypes/scss/modules/schedules.scss
@@ -107,8 +107,18 @@
     font-size: 18px;
   }
   .js-webform-radios {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
     flex-wrap: wrap;
     .js-form-type-radio {
       flex-basis: 100%;
